# ddd-template

./: README.md
airic-mesh/: Cargo.toml  QUICKSTART.md  README.md  TESTING_GUIDE.md
airic-mesh/examples/: basic_usage.rs  simple_demo.rs
airic-mesh/src/: lib.rs  main.rs
airic-mesh/src/adapters/: file_keystore.rs  mod.rs  mqtt_transport.rs
airic-mesh/src/core/: application_message.rs  device.rs  errors.rs  mod.rs  session.rs  wire_message.rs
airic-mesh/src/use_cases/: finalize_provisioning.rs  handle_incoming_message.rs  mod.rs  provision_new_device.rs  revoke_device.rs  send_message.rs
airic-mesh/src/use_cases/ports/: mesh_repository.rs  mod.rs  network_transport.rs
airic-mesh/tests/: session_creation_test.rs
docs/: .rules.md  AGENT.md  README.md  design.md  glossary.md  plan.md  product_idea .md
docs/0-governance/: AGENT.md  constraints.md  decisions.md  glossary.md  risks.md
docs/1-discovery/: .rules.md
docs/1-discovery/context_mapping/: .rules.md
docs/1-discovery/event_storming/: .rules.md
docs/1-strategic/: AGENT.md
docs/2-modeling/: .rules.md
docs/2-tactical/: AGENT.md
docs/3-implementation/: .rules.md
docs/3-quality/: AGENT.md
docs/4-delivery/: AGENT.md
docs/4-testing/: .rules.md
docs/5-evolution/: .rules.md
