[package]
name = "airic-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
vodozemac = "0.6.0"
rumqttc = "0.24.0"
tokio = { version = "1", features = ["full"] }
